@@ -18,6 +18,10 @@
 |===
 | | Description | PR
 
+| 🎁
+| Add JSON/YAML output format for version command
+| https://github.com/knative/client/pull/709[#709]
+
 | 🐣
 | Replaced `kn source cron` with `kn source ping`. `--schedule` is not mandatory anymore and defaults to "* * * * *" (every minute)
 | https://github.com/knative/client/issues/564[#564]
